tests/purs/failing/3453.purs
-- @shouldFailWith CycleInTypeSynonym
module Main where

import Data.Newtype (class Newtype)

type S = S
newtype Z = Z S
derive instance newtypeZ :: Newtype Z _
