tests/purs/failing/3453.out
Error found:
at tests/purs/failing/3453.purs:6:1 - 6:11 (line 6, column 1 - line 6, column 11)

  A cycle appears in the definition of type synonym [33mS[0m
  Cycles are disallowed because they can lead to loops in the type checker.
  Consider using a 'newtype' instead.


See https://github.com/purescript/documentation/blob/master/errors/CycleInTypeSynonym.md for more information,
or to contribute content related to this error.

